cmake_minimum_required(VERSION 3.0)
project(sco)
aux_source_directory(src SRC)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -g -Wall)
add_definitions(-D_DEBUG -D_XOPEN_SOURCE)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)

add_library(sco SHARED ${SRC})

find_package(LIBEVENT REQUIRED)
if(LIBEVENT_FOUND)
    message("libevent ${LIBEVENT_VERSION} found!")
    include_directories(${LIBEVENT_INCLUDE_DIRS})
else()
    message(FATAL_ERROR "libevent not found!")
endif()
target_link_libraries(sco pthread dl event)